K3S/nettools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettools
spec:
  containers:
  - name: nettools
    image: jonlabelle/network-tools
    args:
    - sleep
    - "1000000"
    resources:
      requests:
        cpu: 20m
        memory: 20Mi
      limits:
        cpu: "1"
        memory: 1Gi
