K3S/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: default
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    args:
    - sleep
    - "1000000"
    resources:
      requests:
        cpu: 20m
        memory: 20Mi
      limits:
        cpu: "1"
        memory: 1Gi
